crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__function_definition-4.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"(a, ...b) => true\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..17,
                expr: Lambda(
                    Lambda {
                        span: 0..17,
                        params: [
                            EFnParam {
                                pat: Ident(
                                    EFnParamBindingIdent {
                                        span: 1..2,
                                        id: Ident {
                                            span: 1..2,
                                            name: "a",
                                        },
                                    },
                                ),
                                type_ann: None,
                                optional: false,
                                mutable: false,
                            },
                            EFnParam {
                                pat: Rest(
                                    EFnParamRestPat {
                                        span: 4..8,
                                        arg: Ident(
                                            EFnParamBindingIdent {
                                                span: 7..8,
                                                id: Ident {
                                                    span: 7..8,
                                                    name: "b",
                                                },
                                            },
                                        ),
                                    },
                                ),
                                type_ann: None,
                                optional: false,
                                mutable: false,
                            },
                        ],
                        body: Lit(
                            Bool(
                                Bool {
                                    span: 13..17,
                                    value: true,
                                },
                            ),
                        ),
                        is_async: false,
                        return_type: None,
                        type_params: None,
                    },
                ),
            },
        ],
    },
)
