crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__function_definition-5.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"({x, y}) => x + y;\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..18,
                expr: Lambda(
                    Lambda {
                        span: 0..17,
                        params: [
                            EFnParam {
                                pat: Object(
                                    EFnParamObjectPat {
                                        span: 1..7,
                                        props: [
                                            Assign(
                                                EFnParamAssignPatProp {
                                                    key: Ident {
                                                        span: 2..3,
                                                        name: "x",
                                                    },
                                                    value: None,
                                                },
                                            ),
                                            Assign(
                                                EFnParamAssignPatProp {
                                                    key: Ident {
                                                        span: 5..6,
                                                        name: "y",
                                                    },
                                                    value: None,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                type_ann: None,
                                optional: false,
                                mutable: false,
                            },
                        ],
                        body: Op(
                            Op {
                                span: 12..17,
                                op: Add,
                                left: Ident(
                                    Ident {
                                        span: 12..13,
                                        name: "x",
                                    },
                                ),
                                right: Ident(
                                    Ident {
                                        span: 16..17,
                                        name: "y",
                                    },
                                ),
                            },
                        ),
                        is_async: false,
                        return_type: None,
                        type_params: None,
                    },
                ),
            },
        ],
    },
)
