crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__function_definition-7.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"(a?: boolean, b?) => c;\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..23,
                expr: Lambda(
                    Lambda {
                        span: 0..22,
                        params: [
                            EFnParam {
                                pat: Ident(
                                    EFnParamBindingIdent {
                                        span: 1..2,
                                        id: Ident {
                                            span: 1..2,
                                            name: "a",
                                        },
                                    },
                                ),
                                type_ann: Some(
                                    Prim(
                                        PrimType {
                                            span: 5..12,
                                            prim: Bool,
                                        },
                                    ),
                                ),
                                optional: true,
                                mutable: false,
                            },
                            EFnParam {
                                pat: Ident(
                                    EFnParamBindingIdent {
                                        span: 14..15,
                                        id: Ident {
                                            span: 14..15,
                                            name: "b",
                                        },
                                    },
                                ),
                                type_ann: None,
                                optional: true,
                                mutable: false,
                            },
                        ],
                        body: Ident(
                            Ident {
                                span: 21..22,
                                name: "c",
                            },
                        ),
                        is_async: false,
                        return_type: None,
                        type_params: None,
                    },
                ),
            },
        ],
    },
)
