crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__function_definition.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"(a, b) => c\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..11,
                expr: Lambda(
                    Lambda {
                        span: 0..11,
                        params: [
                            EFnParam {
                                pat: Ident(
                                    EFnParamBindingIdent {
                                        span: 1..2,
                                        id: Ident {
                                            span: 1..2,
                                            name: "a",
                                        },
                                    },
                                ),
                                type_ann: None,
                                optional: false,
                                mutable: false,
                            },
                            EFnParam {
                                pat: Ident(
                                    EFnParamBindingIdent {
                                        span: 4..5,
                                        id: Ident {
                                            span: 4..5,
                                            name: "b",
                                        },
                                    },
                                ),
                                type_ann: None,
                                optional: false,
                                mutable: false,
                            },
                        ],
                        body: Ident(
                            Ident {
                                span: 10..11,
                                name: "c",
                            },
                        ),
                        is_async: false,
                        return_type: None,
                        type_params: None,
                    },
                ),
            },
        ],
    },
)
