crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__if_else-2.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"if (a) { 5; } else if (b) { 10; } else { 20; };\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..47,
                expr: IfElse(
                    IfElse {
                        span: 0..46,
                        cond: Ident(
                            Ident {
                                span: 4..5,
                                name: "a",
                            },
                        ),
                        consequent: Lit(
                            Num(
                                Num {
                                    span: 9..10,
                                    value: "5",
                                },
                            ),
                        ),
                        alternate: Some(
                            IfElse(
                                IfElse {
                                    span: 19..46,
                                    cond: Ident(
                                        Ident {
                                            span: 23..24,
                                            name: "b",
                                        },
                                    ),
                                    consequent: Lit(
                                        Num(
                                            Num {
                                                span: 28..30,
                                                value: "10",
                                            },
                                        ),
                                    ),
                                    alternate: Some(
                                        Lit(
                                            Num(
                                                Num {
                                                    span: 41..43,
                                                    value: "20",
                                                },
                                            ),
                                        ),
                                    ),
                                },
                            ),
                        ),
                    },
                ),
            },
        ],
    },
)
