crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__if_let.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(r#\"\n            let bar = if (let {x, y: b, ...rest} = foo) {\n                \"object\"\n            } else if (let [a, _, ...rest] = foo) {\n                \"array\"\n            } else {\n                \"other\"\n            };              \n        \"#)"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 13..219,
                pattern: Ident(
                    BindingIdent {
                        span: 17..20,
                        id: Ident {
                            span: 17..20,
                            name: "bar",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    IfElse(
                        IfElse {
                            span: 23..218,
                            cond: LetExpr(
                                LetExpr {
                                    span: 27..55,
                                    pat: Object(
                                        ObjectPat {
                                            span: 31..49,
                                            props: [
                                                Assign(
                                                    AssignPatProp {
                                                        span: 32..33,
                                                        key: Ident {
                                                            span: 32..33,
                                                            name: "x",
                                                        },
                                                        value: None,
                                                    },
                                                ),
                                                KeyValue(
                                                    KeyValuePatProp {
                                                        key: Ident {
                                                            span: 35..36,
                                                            name: "y",
                                                        },
                                                        value: Ident(
                                                            BindingIdent {
                                                                span: 38..39,
                                                                id: Ident {
                                                                    span: 38..39,
                                                                    name: "b",
                                                                },
                                                            },
                                                        ),
                                                    },
                                                ),
                                                Rest(
                                                    RestPat {
                                                        span: 41..48,
                                                        arg: Ident(
                                                            BindingIdent {
                                                                span: 44..48,
                                                                id: Ident {
                                                                    span: 44..48,
                                                                    name: "rest",
                                                                },
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                            optional: false,
                                        },
                                    ),
                                    expr: Ident(
                                        Ident {
                                            span: 52..55,
                                            name: "foo",
                                        },
                                    ),
                                },
                            ),
                            consequent: Lit(
                                Str(
                                    Str {
                                        span: 75..83,
                                        value: "object",
                                    },
                                ),
                            ),
                            alternate: Some(
                                IfElse(
                                    IfElse {
                                        span: 103..218,
                                        cond: LetExpr(
                                            LetExpr {
                                                span: 107..132,
                                                pat: Array(
                                                    ArrayPat {
                                                        span: 111..126,
                                                        elems: [
                                                            Some(
                                                                Ident(
                                                                    BindingIdent {
                                                                        span: 112..113,
                                                                        id: Ident {
                                                                            span: 112..113,
                                                                            name: "a",
                                                                        },
                                                                    },
                                                                ),
                                                            ),
                                                            Some(
                                                                Wildcard(
                                                                    WildcardPat {
                                                                        span: 115..116,
                                                                    },
                                                                ),
                                                            ),
                                                            Some(
                                                                Rest(
                                                                    RestPat {
                                                                        span: 118..125,
                                                                        arg: Ident(
                                                                            BindingIdent {
                                                                                span: 121..125,
                                                                                id: Ident {
                                                                                    span: 121..125,
                                                                                    name: "rest",
                                                                                },
                                                                            },
                                                                        ),
                                                                    },
                                                                ),
                                                            ),
                                                        ],
                                                        optional: false,
                                                    },
                                                ),
                                                expr: Ident(
                                                    Ident {
                                                        span: 129..132,
                                                        name: "foo",
                                                    },
                                                ),
                                            },
                                        ),
                                        consequent: Lit(
                                            Str(
                                                Str {
                                                    span: 152..159,
                                                    value: "array",
                                                },
                                            ),
                                        ),
                                        alternate: Some(
                                            Lit(
                                                Str(
                                                    Str {
                                                        span: 197..204,
                                                        value: "other",
                                                    },
                                                ),
                                            ),
                                        ),
                                    },
                                ),
                            ),
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
